--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,9 @@ psycopg2-binary==2.9.6
 pytz==2023.3
 sqlparse==0.4.4
 dj-rest-auth==4.0.1
-reportlab~=4.0.4
+reportlab==4.0.7
 python-dotenv~=1.0.0
+django-cors-headers==4.3.1
+Pillow==10.1.0
+typing_extensions==4.8.0
+tzdata==2023.3
